--- a/1204-taiwan.Rmd
+++ b/1204-taiwan.Rmd
@@ -366,30 +366,40 @@ PlotAdmix("outputs/1204/103-K6.qopt", meta)
 # Dropping hatcheries/Australia
 
 ```{r}
-m65<-m103 %>% filter(!Lineage %in% c("AUS+NG","Mainstream","OceanPick") )
-m65 %>% select(NewPath) %>% write_tsv("bamlists/65.bamlist", col_names = FALSE)
+m64<-m103 %>% filter(!Lineage %in% c("AUS+NG","Mainstream","OceanPick") )
+m64 %>% select(NewPath) %>% write_tsv("bamlists/64.bamlist", col_names = FALSE)
+
+meta<-m64
 ```
 
 ```{sh, eval=FALSE}
 srun -p high -t 4:00:00 --cpus-per-task=6 --mem=32G --nodes=1 $HOME/angsd/angsd -P 6  \
--bam bamlists/65.bamlist -r NC_066833.1 \
+-bam bamlists/64.bamlist -r NC_066833.1 \
 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
--minInd 59 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
+-minInd 58 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
--out outputs/1204/65-ibs-90 > outputs/1204/65-ibs-90.out 2> outputs/1204/65-ibs-90.err &
+-out outputs/1204/64-ibs-90 > outputs/1204/64-ibs-90.out 2> outputs/1204/64-ibs-90.err &
 
-srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/65-ibs-90.beagle.gz -K 2 -o outputs/1204/65-K2 &
-srun -p high -t 07:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/65-ibs-90.beagle.gz -K 3 -o outputs/1204/65-K3 &
-srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/65-ibs-90.beagle.gz -K 4 -o outputs/1204/65-K4 &
-srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/65-ibs-90.beagle.gz -K 5 -o outputs/1204/65-K5 &
-srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/65-ibs-90.beagle.gz -K 6 -o outputs/1204/65-K6 &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/64-ibs-90.beagle.gz -K 2 -o outputs/1204/64-K2 &
+srun -p high -t 07:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/64-ibs-90.beagle.gz -K 3 -o outputs/1204/64-K3 &
+srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/64-ibs-90.beagle.gz -K 4 -o outputs/1204/64-K4 &
+srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/64-ibs-90.beagle.gz -K 5 -o outputs/1204/64-K5 &
+srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1204/64-ibs-90.beagle.gz -K 6 -o outputs/1204/64-K6 &
+
+srun -p high -t 24:00:00 --cpus-per-task=6 --mem=32G --nodes=1 $HOME/angsd/angsd -P 6  \
+-bam bamlists/64.bamlist -rf meta/no-inv-lgs.txt \
+-ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 58 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
+-doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
+-out outputs/1204/64-noinv-ibs-90 > outputs/1204/64-noinv-ibs-90.out 2> outputs/1204/64-noinv-ibs-90.err &
 ```
 
 
 
 ```{r}
-m <- as.matrix(read.table("outputs/1204/65-ibs-90.covMat"))
+m <- as.matrix(read.table("outputs/1204/64-ibs-90.covMat"))
 eig <- eigen(m)
 var<-eig$values/sum(eig$values)
 cumvar<-cumsum(eig$values)/sum(eig$values)
@@ -416,7 +426,7 @@ ggplot(covs) +
   ggtitle("Genome-Wide PCA of L. calcarifer WGS Data") +
   theme(plot.title = element_text(hjust=0.5, face="bold"))
 
-ggsave("outputs/1204/lates-c-genome-wide-pca-12.jpeg")
+ggsave("outputs/1204/lates-taiwan-genome-wide-pca-12.jpeg")
 ```
 For figure  
 
@@ -468,4 +478,96 @@ pc13
 ggarrange(pc12,pc13,ncol=2,widths=c(1,1.4))
 ggsave("outputs/1204/combined-wgspcs-IND-SEA.pdf", width=11, height=5)
 ggsave("outputs/1204/combined-wgspcs-IND-SEA.jpeg", width=11, height=5)
+```
+
+
+admix
+
+```{r}
+PlotAdmix("outputs/1204/64-K2.qopt", meta)
+``` 
+
+```{r}
+PlotAdmix("outputs/1204/64-K2.qopt", meta)
+``` 
+
+```{r}
+PlotAdmix("outputs/1204/64-K3.qopt", meta)
+``` 
+
+```{r}
+PlotAdmix("outputs/1204/64-K4.qopt", meta)
+``` 
+
+```{r}
+PlotAdmix("outputs/1204/64-K5.qopt", meta)
+``` 
+```{r}
+PlotAdmix("outputs/1204/64-K6.qopt", meta)
+``` 
+# Generate calls
+
+```{r}
+m103 %>% select(Run) %>% write_tsv("bamlists/103-sample-names.txt", col_names = FALSE)
+```
+
+Generating across non-inversion regions first.
+
+```{sh, eval=FALSE}
+srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 12 \
+-minInd 93 -bam bamlists/103.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-rf  meta/no-inv.txt -out outputs/1204/snps-wgs  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/snps-wgs.out 2> outputs/1204/snps-wgs.err &
+
+```
+
+
+inversion genotypes from all three regions
+
+NC_066835.1:1-17500000
+NC_066837.1:5247652-
+NC_066852.1:3500000-
+
+```{sh, eval=FALSE}
+srun -t 8:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 12 \
+-minInd 93 -bam bamlists/103.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-r NC_066835.1:1-17500000 -out outputs/1204/lg03  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/lg03.out 2> outputs/1204/lg03.err &
+
+srun -t 8:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 12 \
+-minInd 93 -bam bamlists/103.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-r NC_066837.1:5247652- -out outputs/1204/lg05  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/lg05.out 2> outputs/1204/lg05.err &
+
+srun -t 8:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 12 \
+-minInd 93 -bam bamlists/103.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-r NC_066852.1:3500000- -out outputs/1204/lg20  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1204/lg20.out 2> outputs/1204/lg20.err &
+
+```
+
+
+
+Creating a vcf
+
+```{sh, eval=FALSE}
+plink --tped snps-wgs.tped --tfam snps-wgs.tfam  --out plink-binary --recode --allow-extra-chr --noweb
+plink --ped plink-binary.ped --map plink-binary.map --recode vcf --allow-extra-chr -out plink
+bgzip plink.vcf 
+tabix plink.vcf.gz
+
+
+#renaming vcf bcftools/1.13
+module load bcftools
+
+bcftools reheader --samples bamlists/103-sample-names.txt -o outputs/1204/renamed.vcf.gz outputs/1204/plink.vcf.gz
+
+#--nsites-per-win  removing SNPs with more than 5% missing data first
+bcftools +prune -m 0.30 -w 50kb --nsites-per-win 1 -e'F_MISSING>=0.05' outputs/1204/renamed.vcf.gz > outputs/1204/pruned.vcf
+
+
 ```
