--- a/1204-taiwan.Rmd
+++ b/1204-taiwan.Rmd
@@ -555,7 +555,13 @@ srun -t 8:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=
 
 
 
-Creating a vcf
+Creating a reduced sample list and a vcf
+
+```{r}
+m64<-m103 %>% filter(! Region %in% c("OceanPick","Mainstream","Northern Territory","Papua New Guinea","Queensland"))
+
+m64 %>% select(Run) %>% write_tsv("bamlists/64-sample-names.txt")
+```
 
 ```{sh, eval=FALSE}
 plink --tped snps-wgs.tped --tfam snps-wgs.tfam  --out plink-binary --recode --allow-extra-chr --noweb
@@ -568,6 +574,8 @@ tabix plink.vcf.gz
 module load bcftools
 
 bcftools reheader --samples bamlists/103-sample-names.txt -o outputs/1204/renamed.vcf.gz outputs/1204/plink.vcf.gz
+
+bcftools view -s bamlists/64-sample-names.txt > outputs/1204/64.vcf
 
 #--nsites-per-win  removing SNPs with more than 5% missing data first -e'F_MISSING>=0.05'
 bcftools +fill-tags outputs/1204/renamed.vcf.gz  -- -t MAF,F_MISSING | bcftools view -i 'F_MISSING < 0.05' | bcftools view -i 'INFO/MAF > 0.05' |  bcftools +prune -m 0.20 -w 50kb --nsites-per-win 1 --nsites-per-win-mode rand  > outputs/1204/pruned.vcf
@@ -776,7 +784,7 @@ gl$pop<-as.factor(m$Region)
 glx<-gl
 glx <- gl.compliance.check(glx) 
 
-gl3<-gl.filter.maf(glx, threshold = 0.05)
+gl3<-gl.filter.maf(glx, threshold = 0.10)
 gl3<-gl.filter.allna(gl3)
 gl3
 ```
